[core] Style Hive autocomplete to avoid word wrap

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -1996,3 +1996,7 @@ pre {
   border-left: 5px solid #DDD;
   border-radius: 0;
 }
+
+.hiveAutocompleteItem {
+  white-space: nowrap;
+}
